Changed some wording and text padding

--- a/Code/Drew/htmlcss/lab01-bio.html
+++ b/Code/Drew/htmlcss/lab01-bio.html
@@ -10,6 +10,14 @@
         background-attachment: fixed;
         padding: 25px 50px 75px 100px;
       }
+      #solidback {
+        background-color: #42df42;
+        font-size:20px;
+      }
+      #songtitle {
+        padding-top: 20px;
+        padding-bottom: 10px;
+      }
       #centerback {
         padding:50px;
         background-image: url("images/tjbg2.gif");
@@ -57,9 +65,9 @@
     <div id="centerback">
     <h1>John Baker</h1>
     <h2><img src="images/John_Baker2.jpg" alt="John Baker" align="center"></h2>
-    <p>John Baker is an American music composer and sound designer. Apparently.</p>
+    <p>John Baker is an American music composer and sound designer.</p>
     <p>He studied music composition at Wesleyan University, and sometimes plays keyboard for a local <a href="https://www.dwainespurlin.com">jazz/funk band</a> in San Francisco.</p>
-    <p>I mean, I'm not sure I'd ever actually heard his name before. But there is one very interesting thing about Mr. John Baker:</p>
+    <p>Sure, none of this sounds particularly amazing. But there is one very interesting thing about Mr. John Baker:</p>
     <p>In 1991, he happened to write the greatest video game score of all time.</p>
     <img src="images/logo.png" alt="ToeJam and Earl">
     <img src="images/220px-ToeJam_&_Earl.png" alt="ToeJam and Earl Sega Genesis case">
@@ -108,31 +116,40 @@
   </tr>
 </table>
     <h2>ToeJam and Earl Audio Samples</h2>
-    <p>ToeJam Jammin'</p>
+      <div id="songtitle">
+        <span id="solidback">ToeJam Jammin'</span>
+      </div>
     <audio controls>
       <source src="audio/ToeJam Jammin.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
     </audio>
-    <p>Big Earl Bump</p>
+    <div id="songtitle">
+      <span id="solidback">Big Earl Bump</span>
+    </div>
     <audio controls>
       <source src="audio/Big Earl Bump.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
     </audio>
-    <p>Rapmaster Rocket Racket</p>
+    <div id="songtitle">
+      <span id="solidback">Rapmaster Rocket Racket</span>
+    </div>
     <audio controls>
       <source src="audio/Rapmaster Rocket Racket.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
     </audio>
-    <p>Alien Breakdown</p>
+    <div id="songtitle">
+      <span id="solidback">Alien Breakdown</span>
+    </div>
     <audio controls>
       <source src="audio/Alien Break Down.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
     </audio>
     <h2>Links</h2>
-    <ul>
-      <li><a href="http://www.vgmpf.com/Wiki/index.php?title=John_Baker">John Baker on the Video Game Music Preservation Foundation Wiki</a></li>
-      <li><a href="http://www.hamienet.com/score29943-2.html">Click here for some sheet music</a></li>
-    </ul>
+    <div id="solidback">
+      <ul>
+        <li><a href="http://www.vgmpf.com/Wiki/index.php?title=John_Baker">John Baker on the Video Game Music Preservation Foundation Wiki</a></li>
+        <li><a href="http://www.hamienet.com/score29943-2.html">Click here for some sheet music</a></li>
+      </ul>
     </div>
   </body>
 </html>
