--- a/Code/Drew/htmlcss/lab01-bio.html
+++ b/Code/Drew/htmlcss/lab01-bio.html
@@ -88,31 +88,31 @@
   </tr>
   <tr>
     <td>1994</td>
-    <td><a href="#">Slam City with Scotty Pippin</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Slam_City_with_Scottie_Pippen">Slam City with Scotty Pippin</a></td>
   </tr>
   <tr>
     <td>1998</td>
-    <td><a href="#">Gex: Enter the Gecko</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Gex:_Enter_the_Gecko">Gex: Enter the Gecko</a></td>
   </tr>
   <tr>
     <td>1999</td>
-    <td><a href="#">Gex 3: Deep Cover Gecko</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Gex_3:_Deep_Cover_Gecko">Gex 3: Deep Cover Gecko</a></td>
   </tr>
   <tr>
     <td>2000</td>
-    <td><a href="#">Warriors of Might and Magic</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Warriors_of_Might_and_Magic">Warriors of Might and Magic</a></td>
   </tr>
   <tr>
     <td>2002</td>
-    <td><a href="#">Citizen X</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Digital_Pictures#Games_developed">Citizen X</a></td>
   </tr>
   <tr>
     <td>2017</td>
-    <td><a href="#">Racing Legends at Ferrari Land</a></td>
+    <td><a href="https://www.portaventuraworld.com/en/ferrari-land/rides/racing-legends">Racing Legends at Ferrari Land</a></td>
   </tr>
   <tr>
     <td>2019</td>
-    <td><a href="#">ToeJam & Earl: Back in the Groove</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/ToeJam_%26_Earl:_Back_in_the_Groove">ToeJam & Earl: Back in the Groove</a></td>
   </tr>
 </table>
     <h2>ToeJam and Earl Audio Samples</h2>
